<resources>
    <string name="app_name">CardApplication</string>
    <string name="login">Увійти</string>
    <string name="email">Електронна пошта</string>
    <string name="password">Пароль</string>
    <string name="Loging">Вхід</string>
    <string name="NoAccountRegisterByEmail">Немає акаунту? Зареєструйтесь через електронну пошту!</string>
    <string name="registration">Реєстрація</string>
    <string name="register">Зареєструватися</string>
    <string name="confirmPassword">Підтвердження пароля</string>
    <string name="HaveAccountAlreadyLogin">Уже є акаунт? Увійдіть!</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="personal_account">Особистий кабінет</string>
    <string name="products">Товари</string>
    <string name="card">card</string>
    <string name="transaction_history">Transaction History</string>
    <string name="my_cards">Мої Карти</string>
    <string name="add_a_card">Добавити</string>
    <string name="fill_the_card_number">Введіть ваш номер банківської картки</string>
    <string name="bank_card_number">Номер банківської карти</string>
    <string name="mm_yy">MM/YY</string>
    <string name="cvv">CVV</string>
    <string name="add_new_card">Нова Карта</string>
    <string name="UAH">Грн. </string>
    <string name="product_cost">Hello, %1$s! You have %2$d new messages.</string>
    <string name="error_registration_password">Невірний формат паролю. Пароль має складатись принаймі з 6 символів, 1 цифри та без пробілів.</string>
    <string name="error_login_password">Невірний формат паролю</string>
    <string name="error_email">Невірний формат електроної адреси</string>
    <string name="error_registration_email">Невірний формат електроної адреси</string>
    <string name="error_confirm_passwords">Паролі не співпадають</string>
    <string name="error_incorrect_CVV">Невірний CVV</string>
    <string name="error_incorrect_MMYY">Невірний MMYY</string>
    <string name="error_incorrect_card_number">Невірний номер карти</string>
    <string name="card_added">Карту успішно додано!</string>
    <string name="shopping_history">Історія\nпокупок</string>
    <string name="delivery_address">Адрес\nдоставки</string>

    <!--to toggle the open close button
            of the navigation drawer-->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="points">...</string>
    <string name="Buy">Купити</string>
    <string name="confirm_buying">Замовити</string>
    <string name="add_new_address">Додати нову адресу</string>
    <string name="choose_payment_method">Оберіть спосіб оплати</string>
    <string name="all_total">Сумарно</string>
    <string name="_1">1</string>
    <string name="choose_card">Оберіть карту</string>
    <string name="purchase_successfully">Покупку здійснено успішно!\nПродовжити покупки.</string>
    <string name="purchase_history">Історія покупок</string>


</resources>