<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/registrationTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:paddingTop="70sp"
            android:paddingBottom="0sp"
            android:text="@string/registration"
            android:textAlignment="center"
            android:textColor="#040404"
            android:textSize="28sp" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registrationEmailLayout"
            android:layout_width="290dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/registrationEmailAddress"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:background = "@color/white"
                android:hint="@string/email"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registrationPasswordLayout"
            android:layout_width="290dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/registrationPassword"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"
                android:background="@color/white"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:hint="@string/password"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registrationConfirmPasswordLayout"
            android:layout_width="290dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/registrationConfirmPassword"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"
                android:background="@color/white"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:hint="@string/confirmPassword"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>




        <Button
            android:id="@+id/RegistrationButton"
            android:layout_width="350dp"
            android:layout_marginTop="40dp"
            android:text="@string/register"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/myBlue"/>


        <TextView
            android:id="@+id/HaveAccount"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:clickable="true"
            android:paddingTop="25sp"
            android:paddingBottom="40sp"
            android:text="@string/HaveAccountAlreadyLogin"
            android:textAlignment="center"
            android:textColor="#040404"
            android:textSize="16sp"
            android:focusable="true" />

    </LinearLayout>

</ScrollView>