<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/addNewCardLayout">


    <TextView
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/myBlue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <mostafa.ma.saleh.gmail.com.editcredit.EditCredit
        android:id="@+id/cardNumber"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.8"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:hint="@string/bank_card_number"
        android:paddingStart="15dp"
        app:drawableGravity="end"
        android:background="@drawable/edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topPanel"
        app:separator="spaces"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/addButton"
        android:layout_width="156dp"
        android:layout_height="45dp"
        android:paddingStart="15dp"
        android:layout_marginTop="412dp"
        android:layout_marginEnd="128dp"
        android:background="@drawable/button_temp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/add_a_card"
        android:padding="15sp"
        android:text="@string/add_a_card"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/MM_YY"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.8"
        android:layout_height="45dp"
        android:paddingStart="15dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/mm_yy"
        android:gravity="start|center"
        android:includeFontPadding="true"
        android:inputType="number"
        android:maxLength="5"
        android:background="@drawable/edit_text"
        android:autofillHints="creditCardExpirationDay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardNumber"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/CVV"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:paddingStart="15dp"
        android:autofillHints="creditCardExpirationDay"
        android:gravity="start|center"
        android:hint="@string/cvv"
        android:includeFontPadding="true"
        android:inputType="number"
        android:maxLength="3"
        android:background="@drawable/edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MM_YY"
        app:layout_constraintWidth_percent="0.8" />


</androidx.constraintlayout.widget.ConstraintLayout>