<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.NewCardAddingFragment">

    <TextView
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/myBlue"
        android:text="@string/add_new_card"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cardNumberLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="120dp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topPanel"
        app:layout_constraintEnd_toEndOf="parent">

        <mostafa.ma.saleh.gmail.com.editcredit.EditCredit
            android:id="@+id/cardNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:hint="@string/bank_card_number"
            android:paddingStart="15dp"
            android:background="@color/white"
            android:textColorHint="@color/black"
            android:textSize="16sp"
            app:separator="spaces"
            tools:ignore="RtlSymmetry" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/MM_YYLayout"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardNumberLayout">

        <EditText
            android:id="@+id/MM_YY"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:inputType="number"
            android:maxLength="5"
            android:background = "@color/white"
            android:hint="@string/mm_yy"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/CVVLayout"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardNumberLayout">

        <EditText
            android:id="@+id/CVV"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:paddingStart="0dp"
            android:layout_marginTop="20dp"
            android:paddingEnd="0dp"
            android:inputType="number"
            android:maxLength="3"
            android:background = "@color/white"
            android:hint="@string/cvv"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/addButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/myBlue"
        android:text="@string/add_a_card"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/cardNumberLayout"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@+id/cardNumberLayout"
        app:layout_constraintTop_toBottomOf="@+id/cardNumberLayout" />



    <ImageView
        android:id="@+id/arrowBack"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/arrow_left"
        app:layout_constraintStart_toStartOf="@+id/topPanel"
        app:layout_constraintTop_toTopOf="@+id/topPanel" />


</androidx.constraintlayout.widget.ConstraintLayout>