<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.fragments.PersonalAccountFragment">



    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:maxLength="10"
        app:layout_constraintBottom_toBottomOf="@+id/avatarImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/avatarImage"
        app:layout_constraintTop_toTopOf="@+id/avatarImage" />


    <ImageView
        android:id="@+id/settingsButton"
        android:layout_width="25dp"
        android:layout_height="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/card"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/settings_icon" />

    <ImageView
        android:id="@+id/cardImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toStartOf="@+id/myShoppingIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatarImage"
        app:srcCompat="@drawable/mastercard" />

    <TextView
        android:id="@+id/myCardsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/my_cards"
        android:textColor="#040404"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/cardImage"
        app:layout_constraintStart_toStartOf="@+id/cardImage"
        app:layout_constraintTop_toBottomOf="@+id/cardImage" />

    <ImageView
        android:id="@+id/avatarImage"
        android:layout_width="159dp"
        android:layout_height="171dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/avatar_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/myShoppingIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:foregroundGravity="center"
        android:src="@drawable/my_shopping_icon"
        app:layout_constraintBottom_toBottomOf="@+id/cardImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/myShoppingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/shopping_history"
        android:textColor="#040404"
        android:gravity="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/myShoppingIcon"
        app:layout_constraintStart_toStartOf="@+id/myShoppingIcon"
        app:layout_constraintTop_toBottomOf="@+id/myShoppingIcon" />

    <ImageView
        android:id="@+id/myAddressIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="60dp"
        android:src="@drawable/my_address_icon"
        app:layout_constraintBottom_toBottomOf="@+id/myShoppingIcon"
        app:layout_constraintStart_toEndOf="@+id/myShoppingIcon"
        app:layout_constraintTop_toTopOf="@+id/myShoppingIcon" />

    <TextView
        android:id="@+id/myAddressText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/delivery_address"
        android:textColor="#040404"
        android:textSize="12sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/myAddressIcon"
        app:layout_constraintStart_toStartOf="@+id/myAddressIcon"
        app:layout_constraintTop_toBottomOf="@+id/myAddressIcon" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="2dp"
        android:src="@android:drawable/ic_menu_edit"
        app:layout_constraintBottom_toBottomOf="@+id/userName"
        app:layout_constraintStart_toEndOf="@+id/userName"
        app:layout_constraintTop_toTopOf="@+id/userName"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/logoutIcon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="15dp"
        android:src="@drawable/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>