<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionName="shared_product_container"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.ProductBuyingFragment">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/topPanel">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/addressAddingIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="35dp"
                android:adjustViewBounds="false"
                android:layout_marginStart="15dp"
                android:src="@drawable/map_marker"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/empty_image" />


            <TextView
                android:id="@+id/addAddressText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/add_new_address"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="@id/addressAddingIcon"
                app:layout_constraintStart_toEndOf="@id/addressAddingIcon"
                app:layout_constraintTop_toTopOf="@+id/addressAddingIcon" />

            <ImageView
                android:id="@+id/paymentMethodIcon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="35dp"
                android:src="@drawable/credit_card_multiple"
                app:layout_constraintEnd_toEndOf="@id/addressAddingIcon"
                app:layout_constraintStart_toStartOf="@id/addressAddingIcon"
                app:layout_constraintTop_toBottomOf="@id/addressAddingIcon"
                app:srcCompat="@drawable/empty_image" />

            <TextView
                android:id="@+id/chooseCardText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/choose_payment_method"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="@id/paymentMethodIcon"
                app:layout_constraintStart_toEndOf="@id/paymentMethodIcon"
                app:layout_constraintTop_toTopOf="@+id/paymentMethodIcon" />

            <ImageView
                android:id="@+id/paymentArrow"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="15dp"
                android:src="@drawable/chevron_right"
                app:layout_constraintBottom_toBottomOf="@id/paymentMethodIcon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/paymentMethodIcon"
                app:srcCompat="@drawable/empty_image" />


            <TextView
                android:id="@+id/product_description"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:paddingStart="0dp"
                android:paddingEnd="50dp"
                android:singleLine="false"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@id/product_name"
                app:layout_constraintTop_toBottomOf="@+id/product_name" />


            <TextView
                android:id="@+id/product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="15"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/product_image"
                app:layout_constraintStart_toEndOf="@+id/product_image" />

            <TextView
                android:id="@+id/product_name"
                android:layout_width="170dp"
                android:layout_height="0dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="normal"
                app:layout_constraintStart_toEndOf="@+id/product_image"
                app:layout_constraintTop_toTopOf="@+id/product_image" />

            <ImageView
                android:id="@+id/product_image"
                android:layout_width="135dp"
                android:layout_height="135dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="80dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/paymentMethodIcon"
                app:srcCompat="@drawable/empty_image" />

            <ImageView
                android:id="@+id/plusAmount"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/plus_circle"
                android:layout_marginEnd="15dp"
                app:layout_constraintTop_toTopOf="@id/product_price"
                app:layout_constraintBottom_toBottomOf="@id/product_price"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/productAmount"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginEnd="5dp"
                android:text="@string/_1"
                app:layout_constraintEnd_toStartOf="@id/plusAmount"
                app:layout_constraintTop_toTopOf="@+id/plusAmount"
                app:layout_constraintBottom_toBottomOf="@id/plusAmount"/>

            <ImageView
                android:id="@+id/minusAmount"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/minus_circle"
                android:layout_marginEnd="5dp"
                app:layout_constraintTop_toTopOf="@id/productAmount"
                app:layout_constraintBottom_toBottomOf="@id/productAmount"
                app:layout_constraintEnd_toStartOf="@id/productAmount"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomPanel"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:id="@+id/allTotal"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:textColor="@color/black"
            android:text="@string/all_total"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="15dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/confirmBuying"
            app:layout_constraintBottom_toTopOf="@+id/confirmBuying"/>


        <TextView
            android:id="@+id/totalPrice"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:textColor="@color/black"
            android:text="@string/all_total"
            android:layout_marginEnd="20dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/allTotal"
            app:layout_constraintBottom_toBottomOf="@+id/allTotal"/>

        <Button
            android:id="@+id/confirmBuying"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/myBlue"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/confirm_buying"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>




    <TextView
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/myBlue"
        android:text=""
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/arrowBack"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/arrow_left"
        app:layout_constraintStart_toStartOf="@+id/topPanel"
        app:layout_constraintTop_toTopOf="@+id/topPanel" />


    <TextView
        android:id="@+id/settings"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:text="@string/points"
        android:maxLength="3"
        android:freezesText="true"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/topPanel"
        app:layout_constraintTop_toTopOf="@+id/topPanel" />


</androidx.constraintlayout.widget.ConstraintLayout>